Fixed wrapping issue on billing-info

--- a/resources/css/upay.css
+++ b/resources/css/upay.css
@@ -77,7 +77,7 @@ img.cc-image
 
 .form-group.row-fluid 
 {
-    margin-bottom: 1em;
+    margin-bottom: 12px;
 }
 
 .panel-ad
